# ai4gd-momconnect-haystack

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  config.py  doc_store.py  docker-compose.yaml  log_conf.yaml  main.py  pipelines.py  pyproject.toml  run_evaluations.py  tasks.py
.github/workflows/: test.yaml
chroma_store_data/: chroma.sqlite3
data/flow_definitions/: assessment_flows.json  onboarding_flows.json
data/golden_datasets/: dummy_golden_scenarios.json  user_persona.csv
docs/: requirements.in  requirements.txt
src/: doc_store.py  main.py  pipelines.py
src/ai4gd_momconnect_haystack/: api.py  assessment_logic.py  crud.py  database.py  doc_store.py  enums.py  main.py  pipeline_prompts.py  pipelines.py  pydantic_models.py  sqlalchemy_models.py  survey_orchestrator.py  tasks.py  utilities.py
src/ai4gd_momconnect_haystack/evaluation/: batch_evaluator.py  evaluator.py
src/ai4gd_momconnect_haystack/evaluation/data/: anc_gt.json  dma_gt.json  evaluation_results_20250616.txt  golden_dataset.json  ground_truth.json  gt_bkp.json  intent_gt.json  intent_onboarding_gt.json  kab_gt.json  llm_run_results.json  onboarding_gt.json  simulation_results_anc-survey.json  simulation_results_anc-survey.report.txt  simulation_results_dma.json  simulation_results_dma.report.txt  simulation_results_kab.json  simulation_results_kab.report.txt  simulation_results_onboarding.json  simulation_results_onboarding.report.txt  simulation_run_results_250624-1318.json  simulation_run_results_250624-1318.report.txt  simulation_run_results_250624-1435.json  simulation_run_results_250624-1435.report.txt  simulation_run_results_250624-1437.json  simulation_run_results_250624-1437.report.txt  simulation_run_results_250624-1504.json  simulation_run_results_250624-1504.report.txt  (+24 more)
src/ai4gd_momconnect_haystack/migrations/: env.py
src/ai4gd_momconnect_haystack/static_content/: anc_survey.json  assessment_ends.json  dma.json  faqs.json  introduction_messages.json  kab.json  onboarding.json  service_persona.json
src/evaluation/: __init__.py  core_utils.py  evaluator.py
src/evaluation/data/: assessment_flow.json  golden_dataset.json  onboarding_flow.json
tests/: conftest.py  test_api.py  test_crud.py  test_doc_store.py  test_survey_tasks.py  test_tasks.py
tests/evaluation/: conftest.py  test_core_utils.py  test_validator.py
(+7 files in other folders)
