[project]
name = "ai4gd-momconnect-haystack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "weaviate-haystack>=6.0.0",
    "haystack-ai>=2.13.2",
    "openai>=1.78.1",
    "python-dotenv>=1.1.0",
    "fastapi[standard]>=0.115.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.12",
]

[project.scripts]
main = "ai4gd_momconnect_haystack:main.main"

[tool.uv]
package = true
